[project]
name = "picture_every_day"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paillat", email = "me@paillat.dev"},
]
dependencies = [
    "pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "moviepy @ git+ssh://git@github.com/OsaAjani/moviepy.git",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "basedpyright>=1.16.0",
    "ruff>=0.6.1",
]
[tool.pdm]
distribution = false

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]
venv = "env312"
pythonPlatform = "All"
pythonVersion = "3.12"
typeCheckingMode = "all"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".venv",
    ".vscode",
    ".idea",
]

line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["D100", "D212", "D400", "D415", "DOC201"]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

force-single-line = false       # forces all imports to appear on their own line
force-wrap-aliases = false      # Split imports with multiple members and at least one alias
lines-after-imports = -1        # The number of blank lines to place after imports
lines-between-types = 0         # Number of lines to place between "direct" and import from imports
split-on-trailing-comma = false # if last member of multiline import has a comma, don't fold it to single line

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 15
max-locals = 15
max-nested-blocks = 5
max-returns = 8
max-statements = 75

[tool.ruff.format]
line-ending = "lf"
